--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 }
 
 .container {
-  width: 100%;
+  width: auto;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -25,13 +25,11 @@
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 100vh;
     max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 100%;
     max-width: 768px;
     padding-left: 10px;
     padding-right: 10px;
@@ -39,7 +37,6 @@
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 100%;
     max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
@@ -792,7 +789,7 @@ img {
   }
   .background {
     display: inline-flex;
-    width: 450px;
+    width: 100%;
     height: 120px;
     border-radius: 4px;
     background-color: var(--background);
@@ -824,9 +821,6 @@ img {
   .feature__item:not(:last-child):nth-last-child(-n+2) {
     margin-bottom: 0;
   }
-  .background {
-    width: 100%;
-  }
   .feature__title {
     text-align: start;
   }
@@ -835,15 +829,14 @@ img {
   .feature__list {
     display: flex;
   }
-  .feature__item:not(:last-child) {
+  .feature__item {
     width: calc((100% - 90px) / 4);
+  }
+  .feature__item:not(:last-child) {
     margin-right: 30px;
   }
   .feature__title {
     text-align: start;
-  }
-  .background {
-    width: 100%;
   }
 }
 @media screen and (max-width: 1199px) {
@@ -909,7 +902,7 @@ img {
     display: block;
   }
   .team__item {
-    width: 450px;
+    width: 100%;
     background: var(--team-text--background);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -940,7 +933,7 @@ img {
   .team__list {
     display: flex;
     flex-wrap: wrap;
-    width: 738px;
+    width: 100%;
   }
   .team__item:not(:last-child) {
     margin-right: 30px;
@@ -964,7 +957,7 @@ img {
     padding: 30px 2px;
   }
   .team__item {
-    width: 270px;
+    width: 100%;
   }
   .team__item:not(:last-child) {
     margin-right: 30px;
@@ -1011,7 +1004,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 210px;
+    width: 100%;
     height: 92px;
     border: 1px solid var(--link-f-in-twit);
     border-radius: 4px;
@@ -1027,9 +1020,6 @@ img {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .logo__link {
-    width: 226px;
-  }
   .logo__item {
     width: calc((100% - 60px) / 3);
   }
@@ -1037,9 +1027,6 @@ img {
 @media screen and (min-width: 1200px) {
   .logo__list {
     display: flex;
-  }
-  .logo__link {
-    width: 170px;
   }
   .logo__item {
     width: calc((100% - 150px) / 6);
