--- a/sass/sections/_feature-list.scss
+++ b/sass/sections/_feature-list.scss
@@ -18,7 +18,7 @@
   }
   .background {
     display: inline-flex;
-    width: 450px;
+    width: 100%;
     height: 120px;
     border-radius: 4px;
     background-color: var(--background);
@@ -55,9 +55,6 @@
     }
   }
 
-  .background {
-    width: 100%;
-  }
   .feature__title {
     text-align: start;
   }
@@ -67,16 +64,14 @@
     display: flex;
   }
 
-  .feature__item:not(:last-child) {
+  .feature__item {
     width: calc((100% - 90px) / 4);
+  }
+  .feature__item:not(:last-child) {
     margin-right: 30px;
   }
 
   .feature__title {
     text-align: start;
-  }
-
-  .background {
-    width: 100%;
   }
 }
