--- a/sass/sections/_regular-customers.scss
+++ b/sass/sections/_regular-customers.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 210px;
+    width: 100%;
     height: 92px;
     border: 1px solid var(--link-f-in-twit);
     border-radius: 4px;
@@ -33,9 +33,6 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .logo__link {
-    width: 226px;
-  }
   .logo__item {
     width: calc((100% - 60px) / 3);
   }
@@ -43,9 +40,6 @@
 @media screen and (min-width: 1200px) {
   .logo__list {
     display: flex;
-  }
-  .logo__link {
-    width: 170px;
   }
 
   .logo__item {
