--- a/sass/sections/_team.scss
+++ b/sass/sections/_team.scss
@@ -8,7 +8,7 @@
   }
 
   .team__item {
-    width: 450px;
+    width: 100%;
     background: var(--team-text--background);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -38,7 +38,7 @@
   .team__list {
     display: flex;
     flex-wrap: wrap;
-    width: 738px;
+    width: 100%;
   }
 
   .team__item:not(:last-child) {
@@ -64,7 +64,7 @@
     padding: 30px 2px;
   }
   .team__item {
-    width: 270px;
+    width: 100%;
     &:not(:last-child) {
       margin-right: 30px;
       margin-bottom: 0px;
