--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 100%;
+  width: auto;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -7,14 +7,12 @@
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 100vh;
     max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 100%;
     max-width: 768px;
     padding-left: 10px;
     padding-right: 10px;
@@ -22,7 +20,6 @@
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 100%;
     max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
