--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
 
 @media screen and (min-width: 480px) {
   .container {
-    max-width: 480px;
+    max-width: 450px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -924,7 +924,7 @@ img {
     margin-bottom: 16px;
   }
   .aside {
-    margin-top: 30px;
+    padding-top: 30px;
     padding-bottom: 24px;
     text-align: center;
   }
