--- a/sass/sections/_team.scss
+++ b/sass/sections/_team.scss
@@ -29,7 +29,7 @@
     margin-bottom: 16px;
   }
   .aside {
-    margin-top: 30px;
+    padding-top: 30px;
     padding-bottom: 24px;
     text-align: center;
   }
