--- a/css/main.css
+++ b/css/main.css
@@ -1250,85 +1250,91 @@ img {
     margin-bottom: 50px;
   }
 }
-.portfolio {
-  padding: 94px 0;
+@media screen and (min-width: 320px) {
+  .portfolio {
+    padding: 94px 0;
+  }
+  .grid {
+    display: block;
+  }
+  .grid__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .grid__link {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    color: var(--primari-text-color);
+    text-decoration: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .grid__link:hover, .grid__link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  .portfolio__thumb {
+    position: relative;
+    overflow: hidden;
+  }
+  .portfolio-overlay {
+    display: inline-block;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    overflow: auto;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .grid__link:hover .portfolio-overlay, .grid__link:focus .portfolio-overlay {
+    transform: translateY(0);
+  }
+  .portfolio-overlay__text {
+    font-size: 18px;
+    line-height: 1.56;
+    padding: 63px 24px;
+    color: var(--team-text--background);
+  }
+  .portfolio__sidebar {
+    flex-grow: 1;
+    padding: 20px 24px;
+    border-right: 1px solid var(--border--icon);
+    border-left: 1px solid var(--border--icon);
+    border-bottom: 1px solid var(--border--icon);
+  }
+  .portfolio__subject {
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+  }
+  .portfolio__text {
+    color: var(--title-text-color);
+    font-size: 16px;
+    line-height: 1.9;
+  }
 }
-
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  /* gap: 30px; */
+@media screen and (min-width: 768px) {
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .grid__item {
+    width: calc((100% - 30px) / 3);
+    margin-bottom: 0;
+  }
 }
-
-.grid__item {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.grid__item:nth-child(3n) {
-  margin-right: 0;
-}
-.grid__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
-}
-
-.grid__link {
-  display: block;
-  color: var(--primari-text-color);
-  text-decoration: none;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.grid__link:hover, .grid__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio__thumb {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio-overlay {
-  display: inline-block;
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  overflow: auto;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.grid__link:hover .portfolio-overlay, .grid__link:focus .portfolio-overlay {
-  transform: translateY(0);
-}
-
-.portfolio-overlay__text {
-  font-size: 18px;
-  line-height: 1.56;
-  padding: 63px 24px;
-  color: var(--team-text--background);
-}
-
-.portfolio__sidebar {
-  padding: 20px 24px;
-  border-right: 1px solid var(--border--icon);
-  border-left: 1px solid var(--border--icon);
-  border-bottom: 1px solid var(--border--icon);
-}
-
-.portfolio__subject {
-  margin-bottom: 4px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
-.portfolio__text {
-  color: var(--title-text-color);
-  font-size: 16px;
-  line-height: 1.9;
+@media screen and (min-width: 1200px) {
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .grid__item {
+    width: calc((100% - 60px) / 3);
+  }
 }/*# sourceMappingURL=main.css.map */
