--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@
 }
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1170px;
+    max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -1258,9 +1258,13 @@ img {
   .grid {
     display: block;
   }
+}
+@media screen and (min-width: 320px) and (min-width: 320px) and (max-width: 767px) {
   .grid__item:not(:last-child) {
     margin-bottom: 30px;
   }
+}
+@media screen and (min-width: 320px) {
   .grid__link {
     display: flex;
     flex-direction: column;
@@ -1272,10 +1276,14 @@ img {
   .grid__link:hover, .grid__link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+}
+@media screen and (min-width: 320px) {
   .portfolio__thumb {
     position: relative;
     overflow: hidden;
   }
+}
+@media screen and (min-width: 320px) {
   .portfolio-overlay {
     display: inline-block;
     position: absolute;
@@ -1289,15 +1297,21 @@ img {
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+}
+@media screen and (min-width: 320px) {
   .grid__link:hover .portfolio-overlay, .grid__link:focus .portfolio-overlay {
     transform: translateY(0);
   }
+}
+@media screen and (min-width: 320px) {
   .portfolio-overlay__text {
     font-size: 18px;
     line-height: 1.56;
     padding: 63px 24px;
     color: var(--team-text--background);
   }
+}
+@media screen and (min-width: 320px) {
   .portfolio__sidebar {
     flex-grow: 1;
     padding: 20px 24px;
@@ -1305,6 +1319,8 @@ img {
     border-left: 1px solid var(--border--icon);
     border-bottom: 1px solid var(--border--icon);
   }
+}
+@media screen and (min-width: 320px) {
   .portfolio__subject {
     margin-bottom: 4px;
     font-weight: 700;
@@ -1312,6 +1328,8 @@ img {
     line-height: 2;
     letter-spacing: 0.06em;
   }
+}
+@media screen and (min-width: 320px) {
   .portfolio__text {
     color: var(--title-text-color);
     font-size: 16px;
@@ -1325,15 +1343,13 @@ img {
     gap: 30px;
   }
   .grid__item {
-    width: calc((100% - 30px) / 3);
-    margin-bottom: 0;
+    width: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
   }
   .grid__item {
     width: calc((100% - 60px) / 3);
