--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -6,9 +6,10 @@
   .grid {
     display: block;
   }
-
-  .grid__item:not(:last-child) {
-    margin-bottom: 30px;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .grid__item:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
   // margin-right: 30px;
   // margin-bottom: 30px;
@@ -101,9 +102,9 @@
     flex-wrap: wrap;
     gap: 30px;
   }
+
   .grid__item {
-    width: calc((100% - 30px) / 3);
-    margin-bottom: 0;
+    width: calc((100% - 30px) / 2);
   }
 }
 
@@ -111,7 +112,6 @@
   .grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
   }
   .grid__item {
     width: calc((100% - 60px) / 3);
