--- a/css/main.css
+++ b/css/main.css
@@ -1141,23 +1141,26 @@ img {
     align-items: normal;
   }
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 1199px) {
   .footer-search {
     margin-top: 60px;
+    width: 100%;
   }
-  .footer__mail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  .button-mail {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
   }
+}
+@media screen and (min-width: 320px) {
   .footer-mail__input {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25;
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     box-sizing: border-box;
     align-items: center;
     letter-spacing: 0.03em;
@@ -1182,7 +1185,6 @@ img {
     text-align: center;
     letter-spacing: 0.06em;
     padding: 10px 28px;
-    margin-top: 20px;
     color: var(--primary-bg-color);
     background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1199,18 +1201,13 @@ img {
     margin-left: auto;
   }
   .footer__mail {
-    flex-direction: row;
+    display: flex;
+    align-items: center;
   }
   .footer-mail__input {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
     width: 358px;
   }
   .button-mail {
-    margin-top: 0;
     margin-left: 12px;
   }
 }
