--- a/sass/footer/_footer-email.scss
+++ b/sass/footer/_footer-email.scss
@@ -1,21 +1,23 @@
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 1199px) {
   .footer-search {
     margin-top: 60px;
+    width: 100%;
   }
-  .footer__mail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  .button-mail {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
   }
-
+}
+@media screen and (min-width: 320px) {
   .footer-mail__input {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25;
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
 
     box-sizing: border-box;
     align-items: center;
@@ -44,7 +46,6 @@
     text-align: center;
     letter-spacing: 0.06em;
     padding: 10px 28px;
-    margin-top: 20px;
 
     color: var(--primary-bg-color);
 
@@ -58,9 +59,6 @@
     margin-left: 10px;
   }
 }
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-}
 @media screen and (min-width: 1200px) {
   .footer-search {
     margin-top: 0;
@@ -68,19 +66,13 @@
   }
 
   .footer__mail {
-    flex-direction: row;
+    display: flex;
+    align-items: center;
   }
   .footer-mail__input {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
     width: 358px;
   }
   .button-mail {
-    margin-top: 0;
-
     margin-left: 12px;
   }
 }
