--- a/css/main.css
+++ b/css/main.css
@@ -561,43 +561,54 @@ img {
   pointer-events: none;
 }
 
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 40px;
-  background-color: var(--primary-bg-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+@media screen and (max-width: 1600px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 40px;
+    width: 100%;
+    max-width: 528px;
+    background-color: var(--primary-bg-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+  }
+  .modal__close {
+    position: absolute;
+    display: flex;
+    cursor: pointer;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    color: var(--studio);
+    background: var(--primary-bg-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal__close:hover, .modal__close:focus {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+    outline: none;
+  }
+  .modal__icon {
+    fill: currentColor;
+  }
 }
-
-.modal__close {
-  position: absolute;
-  display: flex;
-  cursor: pointer;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  color: var(--studio);
-  background: var(--primary-bg-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (max-width: 1199px) {
+  .modal {
+    max-width: 450px;
+  }
 }
-.modal__close:hover, .modal__close:focus {
-  color: var(--accent-color);
-  border: 1px solid var(--accent-color);
-  outline: none;
+@media screen and (max-width: 479px) {
+  .modal {
+    width: 90%;
+  }
 }
-
-.modal__icon {
-  fill: currentColor;
-}
-
 @media screen and (min-width: 320px) {
   .modal-form {
     margin: 0;
@@ -662,7 +673,6 @@ img {
   }
   .modal-form__comment {
     resize: none;
-    width: 370px;
     height: 120px;
     font-family: "Roboto";
     font-style: normal;
