--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import './sections/hero';
 @import './components/overlay';
 @import './components/backdrop';
+@import './components/modal';
 @import './components/modal-window';
 
 @import './sections/feature-list';
