--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -3,3 +3,13 @@
   font-weight: $fw;
   line-height: $lh / $fs;
 }
+
+// $baseFontSize: 14px;
+// $mobileWidth: 480px;
+
+// html {
+//   font-size: $baseFontSize;
+//   @media screen and (max-width: ($mobileWidth - 1px)) {
+//     font-size: calc($baseFontSize * (100vw / $mobileWidth));
+//   }
+// }
